tests/negative/neg_pr1116_nominal_literal_oob.safe
package neg_pr1116_nominal_literal_oob

   type user_id is new integer (0 to 10)

   value : user_id = 11
